# SupportAgentOne

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  architecture-proposal-v0.1.de.md  architecture-proposal-v0.1.en.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  vercel.json
.github/workflows/: ci.yml
data/: synthetic_claims.json
docs/: claim-agent-v0.1.md  private-cloud-deployment.md
evals/: claim_review.jsonl
scripts/: backend_smoke.sh  seed_claim_demo.py  start.py
src/backend/supportagent/: eval.py  html_utils.py  pdf_to_confluence.py  seed.py  seed_content.py
src/frontend/: .dockerignore  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json
src/frontend/app/: globals.css  layout.tsx  (+1 more)
supportagent/: adf_utils.py  answer.py  api.py  chunking.py  config.py  dashboard.py  eval.py  eval_questions.py  index.py  ingest.py  langfuse_client.py  models.py  retrieval.py  seed.py  vector_store.py
supportagent/agent/: query_rewrite.py  workflow.py
tests/: test_adf_utils.py  test_agent_workflow.py  test_answer.py  test_auth_security.py  test_chunking.py  test_claim_dataset.py  test_claim_review.py  test_claim_state_machine.py  test_evidence.py  test_html_utils.py  test_insurance_knowledge_prompt.py  test_llm_errors.py  test_llm_providers.py  test_llm_registry.py  test_mcp_teams_tools.py  test_mcp_weather_tools.py  test_query_rewrite.py  test_router.py  test_skills_loader.py  test_storage_service.py  test_vision_service.py
tests/integration/: test_api_contract.py
(+123 files in other folders)
