[project]
name = "supportagent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pypdf", "openai", "psycopg[binary]", "python-dotenv", "pgvector", "fastapi", "uvicorn", "requests", "python-multipart", "langfuse", "langgraph", "mcp", "langchain", "langchain-openai", "boto3"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src/backend"]
include = ["supportagent*"]

[tool.setuptools.package-dir]
"" = "src/backend"

[tool.vercel]
entrypoint = "supportagent.api:app"
